--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -43,7 +43,7 @@
       {{ end }}
 
       &nbsp;&bull;&nbsp;<a href="https://solidaires.org/" title="Union Syndicale Solidaires">Solidaires</a>
-      &nbsp;&bull;&nbsp;<a href="https://solidairesinformatique.org/" title="Solidaires Informatique">Solidaires</a>
+      &nbsp;&bull;&nbsp;<a href="https://solidairesinformatique.org/" title="Solidaires Informatique">Solidaires Informatique</a>
       &nbsp;&bull;&nbsp;<a href={{ "page/legal" | absURL }} title="Mentions légales">Mentions légales</a>
     </p>
     <!-- Please don't remove this, keep my open source work credited :) -->
