--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -37,9 +37,9 @@
 
       &nbsp;&copy;
       {{ if .Site.Params.since }}
-        {{ .Site.Params.since }} - {{ .Site.LastChange.Format "2006" }}
+        {{ .Site.Params.since }} - {{ .Site.Lastmod.Format "2006" }}
       {{ else }}
-        {{ .Site.LastChange.Format "2006" }}
+        {{ .Site.Lastmod.Format "2006" }}
       {{ end }}
 
       &nbsp;&bull;&nbsp;<a href="https://solidaires.org/" title="Union Syndicale Solidaires">Solidaires</a>
